syntax = "proto3";

option go_package = "fomosocial/dumpstr/proto";

message MediaProcessRequest {
    //TODO: Add "type" field
    string media = 1;
    string type = 4;
    string api_version = 10;
}

message MediaProcessReply {
    string media_url = 1;
}

service DumpstrService {
    rpc ProcessMediaDump(MediaProcessRequest) returns (MediaProcessReply) {};
}